test/loop/confidence/errors/assign_errors_1.loop
# Errors in pattern matching functions

func() ->
  x + 1
  where
    x:


